test/custom_configs/bad/005-BadVolume.h
#define BEEPER_VOLUME_MIN 27
/* Values on which beeper volume changing */
#define BEEPER_VOLUME_STEP 26
